--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ label{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    width: 100%;
 }
 
 
@@ -322,8 +323,8 @@ label{
 
 .contenedorBtn{
     display: flex;
-    justify-content: space-around;
-    padding: 10px;
+    justify-content: center;
+    padding: 20px;
 }
 
 button{
@@ -349,6 +350,15 @@ button{
 button:hover{
     background-color: #001d86;
     outline: none;
+}
+
+.botonesEnviarEditar{
+    width: 50%;
+    padding: 10px;
+    display: flex;
+    gap: 10px;
+    justify-content: space-around;
+
 }
 
 /**/
