--- a/libro.css
+++ b/libro.css
@@ -223,7 +223,7 @@ select{
     font-size: 20px;
     cursor: pointer;
     color: white;
-    background-color: #ff4c00;
+    background-color: #002ccc;
 }
 
 /*responsivo*/
