--- a/libro.css
+++ b/libro.css
@@ -210,6 +210,16 @@ select{
     cursor: pointer;
 }
 
+.next{
+    padding: 10px;
+    margin-bottom: 10px;
+    color: #002ccc;
+    font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
+    text-align: center;
+}
+
 /**/
 
 .preguntas-reclamos{
