--- a/osiptel.css
+++ b/osiptel.css
@@ -429,6 +429,37 @@ textarea{
     background-color: #001a99;
 }
 
+/* para la secuencia */
+
+.content-sequence{
+    padding: 20px;
+}
+
+.menu-content-sequence{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 50px;
+    padding: 10px;
+    color: #001a99;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 20px;
+    border:2px solid #ff4c00;
+}
+
+.contenedor-caja-sequencia{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    padding: 5px;
+}
+
+.contenedor-caja-sequencia i{
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+}
 
 /**/
 
